--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,18 @@
     background-color: rgba(255, 182, 193, 1);
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#even-1 {
+    color: #0000FF;
+    font-size: 36px;
+}
+
+.cooler {
+    font-size: 24px;
+}
+
+#even-2 {
+    background-color: hsl(88, 77%, 78%);
+    font-size: 24px;
+    font-weight: bold;
+}
